Mon Sep 22 13:30:28 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/be/be_visitor_component/component_ch.cpp:
        * TAO_IDL/be/be_visitor_component/component_ci.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ch.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ci.cpp:
        * tao/RTCORBA/RT_Protocols_Hooks.cpp:

          Scope use of IOP module.

        * tao/PI_Server/ServerInterceptorAdapter.h:
        * tao/ServerRequestInterceptor_Adapter.h:

          Remove misleading comments.

        * tao/Utils/Servant_Var.inl:

          Remove pointless try / catch.

Sat Sep 19 10:05:29 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Hello/client.cpp:
        * tests/Hello/server.cpp:
          Unicode changes

Sat Sep 19 10:04:29 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.{h,cpp}:
          Added a string_to_object with a wchar_t argument which is TAO
          specific. This makes it much easier to use TAO in an unicode
          application

Fri Sep 19 17:53:29 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Trader/Constraint_Nodes.cpp:
        * tao/ETCL/TAO_ETCL_Constraint.cpp:

          Avoid core dump by returning 0 when evaluating division by zero.
          Partial fix for bugzilla issue #3429.

Fri Sep 19 16:24:20 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/fe/lex.yy.cpp:

          Updated to not compare realpath if it's not found.

Thu Sep 18 22:45:39 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/idl.ll:

          Made idl_parse_line_and_file() to compare the full path to verify
          two path are referring to the same file. This would correctly verify
          even one path is full path and the other is real path.

Thu Sep 18 18:36:39 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2936_Regression/bug2936.mpc: