@@ -1,3 +1,10 @@
+Mon Sep 22 14:57:34 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * orbsvcs/orbsvcs/Trader/Constraint_Nodes.cpp:
+        * tao/ETCL/TAO_ETCL_Contraint.cpp:
+
+          Fix fuzz errors.
+
 Mon Sep 22 13:30:28 UTC 2008  Simon McQueen  <sm@prismtech.com>
 
         * TAO_IDL/be/be_visitor_component/component_ch.cpp:
